--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,3 @@
-.container {
-  box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
-  border-radius: 10px;
-  width: 700px;
-  margin: 60px auto;
-  padding: 30px 30px;
-  font-family: "Poppins", sans-serif;
-}
-
 h1 {
   font-family: "Bebas Neue", sans-serif;
   letter-spacing: 0.5px;
@@ -14,10 +5,7 @@ h1 {
   margin-bottom: 0;
   font-style: normal;
   font-weight: 400;
-}
-
-p {
-  margin-top: 10px;
+  color: rgba(2, 2, 2, 0.9);
 }
 
 header {
@@ -25,37 +13,88 @@ header {
   padding-bottom: 20px;
 }
 
-.submit-button {
-  font-family: "Poppins", sans-serif;
-  border: none;
-  width: 90px;
-  border-radius: 2px;
-}
-
-.search-city {
-  font-family: "Poppins", sans-serif;
-  box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
-  border-radius: 1px;
-  border: none;
-}
 footer {
   border-top: 1px solid #f9f7fe;
   padding-top: 20px;
   font-size: 12px;
   text-align: center;
+  color: rgba(2, 2, 2, 0.8);
+}
+
+p {
+  margin-top: 10px;
+  color: rgba(2, 2, 2, 0.4);
+}
+
+a {
+  color: rgba(32, 100, 212);
+  text-decoration: none;
+}
+.container {
+  box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
+  border-radius: 10px;
+  width: 600px;
+  margin: 60px auto;
+  padding: 30px 30px;
+  font-family: "Poppins", sans-serif;
+}
+
+.main-temperature {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 0;
 }
 
 .main-degrees {
   font-family: "Bebas Neue", sans-serif;
   font-weight: 400;
   font-style: normal;
-  font-size: 80px;
+  font-size: 92px;
+  color: rgba(2, 2, 2, 0.9);
+  position: relative;
+  top: 22px;
 }
 
 .main-degrees-emoji {
-  font-size: 30px;
+  font-size: 37px;
+  position: relative;
+  bottom: 18px;
+  right: 4px;
 }
 
 .main-degrees-unit {
   font-size: 38px;
+  position: relative;
+  bottom: 37px;
+}
+
+.submit-button {
+  font-family: "Poppins", sans-serif;
+  border: none;
+  width: 90px;
+  border-radius: 2px;
+  background-color: rgba(32, 100, 212);
+  color: white;
+  letter-spacing: 0.2px;
+  padding: 3px 3px;
+  transition: 200ms all ease-in-out;
+}
+.submit-button:hover {
+  background-color: #1969ea;
+  box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
+}
+
+.search-city {
+  font-family: "Poppins", sans-serif;
+  box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
+  border-radius: 4px;
+  border: 1px solid #f9f7fe;
+  padding: 3px 3px 3px 10px;
+
+  color: rgba(39, 33, 66, 0.1);
+  font-weight: 300;
+}
+
+.highlighted-units {
+  color: #e8668d;
 }
