--- a/src/styles.css
+++ b/src/styles.css
@@ -72,7 +72,7 @@ a {
 .submit-button {
   font-family: "Poppins", sans-serif;
   border: none;
-  width: 90px;
+  width: 18%;
   border-radius: 2px;
   background-color: rgba(32, 100, 212);
   color: white;
@@ -94,6 +94,7 @@ a {
 
   color: rgba(39, 33, 66, 0.1);
   font-weight: 300;
+  width: 70%;
 }
 
 .highlighted-units {
