--- a/src/styles.css
+++ b/src/styles.css
@@ -100,3 +100,30 @@ a {
 .highlighted-units {
   color: #e8668d;
 }
+
+.weather-forecast {
+  display: flex;
+  justify-content: space-around;
+  padding-bottom: 40px;
+  text-align: center;
+  margin-top: 10px;
+}
+
+.weather-forecast-weekday {
+  color: rgba(2, 2, 2, 0.4);
+  line-height: 30px;
+  padding-bottom: 5px;
+}
+.weather-forecast-emoji {
+  font-size: 30px;
+  padding-bottom: 5px;
+}
+.weather-forecast-temperatures {
+  color: rgba(2, 2, 2, 0.4);
+  line-height: 30px;
+  color: #e8668d;
+}
+
+.forecast-bold {
+  font-weight: 600;
+}
